fix: text align in search box

--- a/ManagerFrontApp/src/app/hospital1/hospital1.component.css
+++ b/ManagerFrontApp/src/app/hospital1/hospital1.component.css
@@ -243,7 +243,7 @@
 }
 .search-list-table td {
   padding: 10px;
-  text-align: left;
+  text-align: center;
   vertical-align: middle;
   font-size: 16px;
   color: #000;
